# alloy

./: .gitignore  README.md  SESSION_HANDOFF.md  __init__.py  configuration_alloy.py  loading.py  modeling_alloy.py  pyproject.toml
examples/: README.md  build_from_config.py  build_from_python.py  package_config_for_hub.py
examples/configs/: qwen3_340m_dense.json  qwen3_4b.json  qwen3_5_35b_a3b.json  qwen3_next_1_3b_dense.json  qwen3_next_340m_dense.json
examples/train/: README_data.md  README_mindspeed_mm.md  mindspeed_mm_patches.md  pretrain_alloy_340m_fsdp2.sh  pretrain_alloy_340m_fsdp2.yaml  pretrain_alloy_qwen3_5_moe_mindspeed.yaml  pretrain_alloy_qwen3_dense_mindspeed.yaml  pretrain_alloy_qwen3_next_340m_mindspeed.yaml
integrations/: __init__.py  hf_npu_binder.py  mindspeed_mm.py
modules/: __init__.py  registry.py
modules/attention/: __init__.py  gdn.py  gqa.py  qwen3_5_gdn.py
modules/ffn/: __init__.py  mlp.py  moe.py  qwen3_5_moe.py
modules/shared/: __init__.py  attention_kernels.py  norm.py  rotary.py
scripts/: compare_qwen3.py  compare_qwen3_5.py
tests/: _compare_utils.py  test_construct.py  test_hf_npu_binder_integration.py  test_impl_registry.py
tests/gpu/: compare_qwen3_5_pretrained.py  compare_qwen3_pretrained.py
tests/npu/: compare_binder_vs_torch.py  compare_qwen3_5_pretrained.py  compare_qwen3_pretrained.py  compare_training_step_vs_hf.py  debug_layerwise_diff.py  debug_sublayer_diff.py  diag_hf_setattr_isolation.py  run_compare_grid.sh
tools/: __init__.py  count_params.py  dcp_to_hf.py  export_for_hub.py
